  visualizing kernel density estimates. (Thanks to Winston Chang)

* `annotation_map`

* New fortify methods for objects produced by the `multcomp` package.

* `stat_summary2d` and `stat_summary_hex`. These are work like `stat_bin2d`
  and stat_binhex but allow any summarisation function (instead of just
  count). They are 2d analogs of `stat_summary`

MINOR CHANGES

* `geom_text` now supports `fontfamily`, `fontface`, and `lineheight`
  aesthetics for finer control over text display. (Thanks to Kohske Takahashi
  for the patch. Fixes #60)

* `collide`, which powers `position_dodge` and `position_stack`, now does not
  error on single x values (Thanks to Brian Diggs for a fix. #157)

* `...` in `ggplot` now passed on to `fortify` method when used with an object
  other than a data frame

* `geom_boxplot`: outlier colour and shape now default to values set by the
  aesthetic mapping (thanks to suggestion by Ben Bolker), the width of the
  median line is now `fatten` times the width of the other lines (thanks to
  suggestion by Di Cook), and the line type can now be set. Notched box
  plots are now supported by setting `notch = TRUE` (thanks to Winston Chang
  for the patch).

* `ggsave` can work with cm and mm `units` (Thanks to patch from Jean-Olivier
  Irisson)

* Scales now automatically shrink to what is actually displayed on the plot,
  not the underlying data used for statistical transformation. If you want the
  old behaviour, supply `shrink = FALSE` to the facetting specification.
  (Fixes #125)

* `scale_shape` finally returns an error when you try and use it with a
  continuous variable

* `stat_contour` no longer errors if all breaks outside z range (fixes #195).

* `geom_text` remove rows with missing values with warning (fixes #191)

* New generic function `autoplot` for the creation of complete plots
  specific to a given data structure. Default implementation throws
  an error. It is designed to have implementations provided by other
  packages.
  