@@ -27,6 +27,7 @@ NEW FEATURES
   and stat_binhex but allow any summarisation function (instead of just
   count). They are 2d analogs of `stat_summary`
 
+<<<<<<< HEAD
 MINOR CHANGES
 
 * `geom_text` now supports `fontfamily`, `fontface`, and `lineheight`
@@ -88,6 +89,10 @@ MINOR CHANGES
 
 * `stat_bin` and `geom_histogram` now use right-open, left-closed intervals by
   default. Use `right = TRUE` to return to previous behaviour.
+
+* `facet_grid`: now supports `free_x` and `free_y`, this allows the user to 
+  the scaling of the facets to either the x or y direction. Which is especially 
+  useful when the scales are very different.
 
 DEVELOPMENT
 
